Applying styling to fix issues with text wrapping in Events page

--- a/public/assets/stylesheets/mystyles.css
+++ b/public/assets/stylesheets/mystyles.css
@@ -20,6 +20,10 @@
   width:95%
 }
 
+.nowrap{
+   word-wrap: break-word;
+ }    /* IE */
+
 .wid-well{
   width:100%
 }
